--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,14 @@ html {
     margin-bottom: 2px;
     padding: 5px 10px;
 }
+
+.boxes {
+    border: 1px solid white;
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    -ms-flex-align: end;
+    
+
+}
+
