--- a/event.css
+++ b/event.css
@@ -23,6 +23,9 @@ html {
     justify-content: center;
     flex-direction: column;
     padding: 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+    color: white;
 }
 h1 {
     color: white;
@@ -36,3 +39,4 @@ button {
     width: 40%;
     margin: 0 auto;
     padding: 10px 15px;
+}
