--- a/event.css
+++ b/event.css
@@ -40,3 +40,25 @@ button {
     margin: 0 auto;
     padding: 10px 15px;
 }
+
+.div2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid white;
+    color: white;
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.div1 {
+    border: 1px solid green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 200px;
+    width: 150px;
+}
